--- a/anchoriframe.html
+++ b/anchoriframe.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <a href="https://thumbs.dreamstime.com/b/young-conceptual-image-large-stone-shape-human-brain-conceptual-image-large-stone-shape-110748113.jpg" target="frame">image</a>
-    <a href="https://www.youtube.com/embed/YFZMBqyXkqQ?si=UyGn7pkVZigWy-s3" target="frame">trailer</a>
+    <a href="https://www.youtube.com/embed/YFZMBqyXkqQ?si=UyGn7pkVZigWy-s3" target="frame" >trailer</a>
     <a href="https://ashokmadagoni.github.io/quotations/day6task.html" width="400" heigt="400" target="frame">html file</a>
     <a href="./textfile.txt" target="frame">textfile</a>
-    <iframe src="" frameborder="1" name="frame"   scrolling="yes" width="400" height="400" ></iframe>
+    <iframe src="" frameborder="1" name="frame"   scrolling="yes" width="400" height="400" allowfullscreen></iframe>
 </body>
 </html>
